# api/src/controller/pessoaController/index.js
@@ -1,9 +1,9 @@
-const usuarioModel = require("@model/usuario");
+const pessoaModel = require("@model/pessoa");
 const { status } = require("@helper/Status/index");
 const { Papel } = require("@helper/");
 
 module.exports = {
-    async createUsuario(req,res){
+    async createPessoa(req,res){
         //#region Swagger description API 
         /*
             Alterar o arquivo swagger_output.json com as informações do endpoint
@@ -23,7 +23,7 @@ module.exports = {
             
             if(req.papel != Papel.GG && req.papel != Papel.MS) return res.status(403).json({message:'Você não possui permissão para criar Usuário!',status:status(403).reqStatus});
 
-            const data = await usuarioModel.createUsuario(req.body);
+            const data = await pessoaModel.createPessoa(req.body);
             
             if(!data) return res.status(400).json({message:'Não foi possível atualizar essa informação!',data:null,status:status(400).reqStatus});
 
@@ -33,7 +33,33 @@ module.exports = {
             res.status(status(500).reqStatus).json({message:status(500).message,status:status(500).reqStatus});
         }
     },
-    async getUsuarioAll(req,res){
+    async getPessoaAll(req,res){
+        //#region Swagger description API 
+        /*
+            Alterar o arquivo swagger_output.json com as informações do endpoint
+            #swagger.description = 'Retorna um array de pessoas'
+
+            #swagger.parameters[''] = {
+                description: 'Token',
+                type: 'string',
+                required: true,
+                in: 'Authorization',
+                example: 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZHVzdWFyaW8iOjYsImVtYWlsIjoiYnJ1bm8uZmVycmVpcmFAY2Vuc29ici5jb20uYnIiLCJwYXBlbCI6IkdTIiwiaWF0IjoxNjY0ODg4ODMxLCJleHAiOjE2NjQ5NzUyMzF9.O_8eGXCn-MO9uriHlgdBbsGkP43pgA9MBY5zVX24qFU',
+            }
+        */
+       //#endregion
+        try{
+            const data = await pessoaModel.getPessoaAll();
+            
+            if(!data) return res.status(400).json({message:'Não foi possível atualizar essa informação!',data:null,status:status(400).reqStatus});
+
+            return res.status(status(200).reqStatus).json({message:status(200).message,data,status:status(200).reqStatus});
+            
+        }catch(error){
+            res.status(status(500).reqStatus).json({message:status(500).message,status:status(500).reqStatus});
+        }
+    },
+    async getPessoaEmail(req,res){
         //#region Swagger description API 
         /*
             Alterar o arquivo swagger_output.json com as informações do endpoint
@@ -49,7 +75,8 @@ module.exports = {
         */
        //#endregion
         try{
-            const data = await usuarioModel.getUsuarioAll();
+            if(!req.body) return res.status(status(401).reqStatus).json({message:status(401).message,status:status(401).reqStatus});
+            const data = await pessoaModel.getPessoaEmail(req.body);
             
             if(!data) return res.status(400).json({message:'Não foi possível atualizar essa informação!',data:null,status:status(400).reqStatus});
 
@@ -59,34 +86,7 @@ module.exports = {
             res.status(status(500).reqStatus).json({message:status(500).message,status:status(500).reqStatus});
         }
     },
-    // async getUsuarioEmail(req,res){
-    //     //#region Swagger description API 
-    //     /*
-    //         Alterar o arquivo swagger_output.json com as informações do endpoint
-    //         #swagger.description = 'Descrição do endpoint'
-
-    //         #swagger.parameters[''] = {
-    //             description: 'Nome do parametro',
-    //             type: 'string',
-    //             required: true,
-    //             in: 'body',
-    //             example: 'admin@censo.com.br',
-    //         }
-    //     */
-    //    //#endregion
-    //     try{
-    //         if(!req.body) return res.status(status(401).reqStatus).json({message:status(401).message,status:status(401).reqStatus});
-    //         const data = await usuarioModel.getUsuarioEmail(req.body);
-            
-    //         if(!data) return res.status(400).json({message:'Não foi possível atualizar essa informação!',data:null,status:status(400).reqStatus});
-
-    //         return res.status(status(200).reqStatus).json({message:status(200).message,data,status:status(200).reqStatus});
-            
-    //     }catch(error){
-    //         res.status(status(500).reqStatus).json({message:status(500).message,status:status(500).reqStatus});
-    //     }
-    // },
-    async getUsuarioUnique(req,res){
+    async getPessoaUnique(req,res){
         //#region Swagger description API 
         /*
             Alterar o arquivo swagger_output.json com as informações do endpoint
@@ -105,7 +105,7 @@ module.exports = {
             
             if(!req.body) return res.status(status(401).reqStatus).json({message:status(401).message,status:status(401).reqStatus});
 
-            const data = await usuarioModel.getUsuarioUnique(req.body);
+            const data = await pessoaModel.getPessoaUnique(req.body);
             
             if(!data) return res.status(400).json({message:'Não foi possível atualizar essa informação!',data:null,status:status(400).reqStatus});
 
@@ -115,7 +115,7 @@ module.exports = {
             res.status(status(500).reqStatus).json({message:status(500).message,status:status(500).reqStatus});
         }
     },
-    async altUsuario(req,res){
+    async altPessoa(req,res){
         //#region Swagger description API 
         /*
             Alterar o arquivo swagger_output.json com as informações do endpoint
@@ -131,8 +131,10 @@ module.exports = {
         */
        //#endregion
         try{
+            
             if(!req.body) return res.status(status(401).reqStatus).json({message:status(401).message,status:status(401).reqStatus});
-            const data = await usuarioModel.updateUsuario(req.body);
+
+            const data = await pessoaModel.updatePessoa(req.body);
             
             if(!data) return res.status(400).json({message:'Não foi possível atualizar essa informação!',data:null,status:status(400).reqStatus});
 
@@ -142,7 +144,7 @@ module.exports = {
             res.status(status(500).reqStatus).json({message:status(500).message,status:status(500).reqStatus});
         }
     },
-    async delUsuario(req,res){
+    async delPessoa(req,res){
         //#region Swagger description API 
         /*
             Alterar o arquivo swagger_output.json com as informações do endpoint
@@ -158,8 +160,10 @@ module.exports = {
         */
        //#endregion
         try{
+            
             if(!req.body) return res.status(status(401).reqStatus).json({message:status(401).message,status:status(401).reqStatus});
-            const data = await usuarioModel.deleteUsuario(req.body);
+
+            const data = await pessoaModel.deletePessoa(req.body);
             
             if(!data) return res.status(400).json({message:'Não foi possível atualizar essa informação!',data:null,status:status(400).reqStatus});
 
@@ -168,5 +172,5 @@ module.exports = {
         }catch(error){
             res.status(status(500).reqStatus).json({message:status(500).message,status:status(500).reqStatus});
         }
-    },
+    }
 }
